--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/atishhamte/loon.git"
+    "url": "git+https://github.com/atishhamte/loon.git"
   },
   "bugs": {
     "url": "https://github.com/atishhamte/loon/issues"
